# Amazing-Marvin-MCP

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  api_test.py  mypy.ini  pyproject.toml  requirements.txt  smithery.yaml
.github/workflows/: ci.yml  deploy-smithery.yml  publish.yml
scripts/: release.py
src/amazing_marvin_mcp/: __main__.py  api.py  config.py  main.py  utils.py
src/amazing_marvin_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  test_api.py
